[tool.poetry]
name = "rm-drm"
version = "0.1.0"
description = ""
authors = ["Kelvin Ng <hoishing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pycryptodome = "^3.20.0"
lxml = "^5.3.0"
streamlit = "^1.38.0"
watchdog = "<=5"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
